GDP and perspectives

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -206,13 +206,13 @@ There is evidence that the Olivia(c) is building a connection to the game making
 <!-- SIGNPOSTING TO DOL & OTHER ASPECTS OF GDP Use -->
 
 
-**Skillful parental work to sustain engagement**
+**Skilful parental work to sustain engagement**
 
 The parent takes action to involve her child in the design process when technically possible and to incorporate her child's interests. The full arc of the vignette, the parent overcomes her own hesitancy regarding asking for facilitator help by sending out her child to ask. When the code problem has been solve, she signals clearly to her child to return to the design process. This indicates that she is aware of the greater possibility for effective child input at these moments. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child prompting the child to play-test the game.
 
 The parent struggles to implement quite ambitious code challenges that she takes on but signals clearly when the process returns to a state suitable for ideation and design within the scope of the child. The completion of a coding task indicating that she is aware of the greater possibility for effective child input at this stage. The parent navigates the process skilfully and is able to elicit and then incorporate the child's interests in a variety of ways.
 
-**Challenge and inititive**
+**Challenge and initiative**
 
 The child also show initiative, in particular in relation to level design.  
 
@@ -221,7 +221,8 @@ There is an awareness of and playfulness surrounding the conventions of a platfo
 
 **Transition**
 
-The interactions outlined in this vignette extract show some of the uses of GDPs as mediating strategies and repertoires of interaction that have emerged. These include x and y - which are explore in the next sections, particularly those addressing cultural practices and interpersonal /  guided participation.
+The interactions outlined in this vignette extract show some of the uses of GDPs as mediating strategies and repertoires of interaction that have emerged. These include x and y - which are explore in the next sections, particularly those a
+ddressing cultural practices and interpersonal /  guided participation.
 
 
 <!--
@@ -270,51 +271,26 @@ While other community interactions existed (introductions, warm up games), playt
 <!-- NOTE - ALSO LINKED TO IDEATION? - is this guided participation? -->
 
 
-**The use of GDPs (especially during playtesting) can aid the process of imagining the end user experiences**
+**The use of GDPs (especially during playtesting) can aid the process of imagining end user experiences**
 
-This section examines how the concept and experience of implementing GDPs provoked participants to imagine the experience of end users of their game.
+This section examines how the concept and experience of implementing GDPs provoked participants to imagine the experience of end users of their game. Chapter 2 explored the proposal of professional and participatory design processes is that design should be informed by end user experience [@redstrom_towards_2006] , and the challenges involved in undertaking such a "operationalization of empathy" [@surma-aho_conceptualization_2022, p.1]. Taking a CHAT interpretation, this process involves shifts in perspectives from participants as they engage with objectives on different scopes of activity.
 
-This process involves shifts in perspectives from participants as they engaging with objectives on different scopes of activity. For example, participants may get caught up in a particular design goal on a micro-level, engagement may drive an implementation of a quirky characteristic. When this game is self-tested or playtested, that characteristic may not withstand the shift in perspective to the wider goal of making an engaging game if it interferes with the engagement of the test users.
-FIND SUPPORT, ideally an example
+For example, in the vignette above Olivia(c) persues a quirky design goal during her pair design work, which Suzanna(p) resists.  Imagining a the shift in perspective to the imagined audience, the parent is keen to keep a sense of game balance to ensure a sense of challenge for the imagined player.
 
+Suzanna shares _"Must be quite hard to get through that door._" when Olivia places the exit door high above a platform. She then continues - _“It’s no fun having a game without any hazards to avoid.”_ The child seems determined to remove all hazards. _"It is for me!"_ the child counters. She may be aware of the implications for game balance but takes pleasure in this destruction of the key challenge of the game as an act of disruptive play. A later interaction with a peer shows that she is indeed imagining of the experience of a more immediate audience of fellow game makers and supporting students. _"I like making it frustrating. that other people find it frustrating!"_
+
+<!-- Olivia  comments that she wants players to be frustrated when playing the game and that this is a contrast to final level which has only rewards and no hazards. This being a "secret, special" experience which plays against the norms of platform game design, thus provoking player surprise and fun. She notes the persistence of the student helper who pushes past her frustration to complete the game. Suzanna remark "If people tried hard they would get to my level" shows her awareness of that not all players will persist in the same way. -->
+
+This relatively sophisiticated interaction illustrates the use of terms from GDPs to both explain and negotiate a conflict over the imagined user experience.
+SAY HOW? IN AT TERMS.
+
+DROP OR SHIFT?
 Game design patterns focused on gameplay rather than code structure focus on recognisable behaviour. Thus in the same way that visually organised code can aid ideation, designing code framework to help participants alter on a noticeable change in game play can foreground key GDPs.
 
-In the starting vignette of the chapter Olivia and Suzanna come into conflict over the imagined experience of future players. The parent is keen to keep a sense of game balance to ensure a sense of challenge for the imagined player. Suzanna shares _"Must be quite hard to get through that door._" when Suzanna places the exit door high above a platform. She then continues - _“It’s no fun having a game without any hazards to avoid.”_ The child seems determined to remove all hazards. _"It is for me!"_ the child counters. She may be aware of the implications for game balance but takes pleasure in this destruction of the key challenge of the game as an act of disruptive play (as explored in the previous chapter). This interaction shows the use of terms from GDPs to both explain and negotiate a conflict over the imagined user experience.
 
-Later Olivia interacts with one of the student helpers and outlines her motivations in design.
-    H1- Has it been a lot of fun
-    Olivia: Yes and I like making it frustrating. that other people find it frustrating!
+<!-- While Suzanna(p) imagine a user experience and make a playable game conforming to her perception of norms, Olivia's(c) playful imagining of the experience of a more immediate audience of fellow game makers and supporting students appears to provide a tangible motivation with rapid rewards.
+wider goal of making an engaging game if it interferes with the engagement of the test users. -->
 
-Olivia  comments that she wants players to be frustrated when playing the game and that this is a contrast to final level which has only rewards and no hazards. This being a "secret, special" experience which plays against the norms of platform game design, thus provoking player surprise and fun. She notes the persistence of the student helper who pushes past her frustration to complete the game. Suzanna remark "If people tried hard they would get to my level" shows her awareness of that not all players will persist in the same way.
-
-REFERENCE THE FOLLOWING IN AN APPENDIX
-<!-- Later Olivia interacts with one of the student helpers and outlines her motivations in design.
-
-    H1: Have you enjoyed making the game?
-    Olivia: Yes
-    H1- Has it been a lot of fun
-    Olivia: Yes and I like making it frustrating. that other people find it frustrating!
-    ...
-    Olivia: You’ve nearly got to mine. Mine’s very hard to get to.
-    H1. Is it?
-    Olivia: You’ll like it when you get to it.
-    H 1: How many levels do you have?
-    Olivia: Four. Mine’s the last one. And it’s very fun. Do you want to guess about it?
-    H1: Erghm. Is there lots of bikes?
-    Olivia: Yes, guess how many there are?
-    H1: Is it the whole screen?
-    Olivia: YES! Laughs
-    ...
-    H1: I will get it to your level
-    Olivia: You seem to not give up. that’s good
-    Olivia turns away to get a hug from her mother.
-    H1: I got to your level
-    Olivia: Good! (laughs)
-    Olivia: It’s a secret, special one. (...) If people tried hard they would get to my level. -->
-
-
-THIS SEEMS RELATIVELY WEAK AND PERHAPS A GOOD STRAND TO DROP
-A common proposal of research on professional and participatory design processes is that that ideation is more productive when informed by a realistic sense of the end user experience. (explored in Lit Review) The examples show different forms of designing for others. One is to imagine a user experience and make a playable game in the abstract which matches the mother's approach. Olivia's playful imagining of the experience of a more immediate audience of fellow game makers and supporting students appears to provide a tangible motivation with rapid rewards.
 
 POSSIBLE END TO THIS SECTION?
 **GDPs aid the overall process of design for others by providing discreet and clear goals which are nested in the wider goal of making an engaging game.**
