--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -160,7 +160,8 @@ _extending the use of GDPs beyond the initial use to diverse mediational uses an
 
 ## Initial broad commentary on Vignette 2
 
-In this section, I provide an overview of the specifics of the learning design and participant interactions. To achieve this, I use a vignette to capture a snapshot of the interactions within one family, as it includes several aspects of activity that incorporate the use of GDP concepts. A truncated table presents participant dialogue, screenshots and a description of their interactions, including gestures, followed by a summary interpretation of these interactions. A more extended extract of dialogue, activity description and commentary is available in Vignette 2 in the appendices. For the preceding ten minutes, the parent and child dyad had been struggling with a tutorial chapter in the textbook, included as Appendix 5.x, which explains how to add the pattern of keys and doors. In this pattern, players must collect a key and then navigate to a door to progress to the next level. The parent, Suzanna, had been making multiple changes to the code while the child, Olivia, expressed boredom. Suzanna then suggested that Olivia ask the facilitator, Mick, for help in resolving the coding issue. Once the bug was resolved, Suzanna handed the keyboard to Olivia to test the now working game.
+In this section, I provide an overview of the specifics of the learning design and participant interactions. Beyond providing the reader with an illustrative example of partner work in game coding, this commentary begins to surfacing uses of GDPs as a meditational strategy, which are then explored using wider data in the rest of the chapter. To achieve this, I use a vignette to capture a snapshot of the interactions within one family, as it includes several aspects of activity that incorporate the use of GDP concepts. A truncated table presents participant dialogue, screenshots and a description of their interactions, including gestures, followed by a summary interpretation of these interactions. A more extended extract of dialogue, activity description and commentary is available in Vignette 2 in the appendices.
+
 
 <!-- INSERT VIGNETTE TABLE HERE
 https://docs.google.com/document/d/1B7kFl5QsGV-oWtFWHLBIJNpa5GeYMlCntq31BnPAQT4/edit -->
@@ -195,13 +196,7 @@ Outer pipes Cell padding
 
 ### Short Descriptive Commentary on Vignette 2
 
-Beyond providing the reader with an illustrative example of partner work in game coding, this commentary has a primary focus on surfacing uses of GDPs as a meditational strategy, which are then explored using wider data in the rest of the chapter. The implementation of a new game design pattern (GDP) involve adding new code to the game. The amount of code and/ changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging.
-
-The child(c) Olivia uses the name of game design pattern they are working in _Keys and Doors_ in the process of encouraging her parent(p) Suzanna to get started on it (Key 44 in Vignette 2).
-
-The key and door pattern is one of the harder ones to implement. Olivia is one of the younger participants and the parent Suzanna has taken on the role of solving harder code problems and in doing so has built important proficiency in coding practice.
-
-There is evidence that the Olivia(c) is building a connection to the game making pattern in (Key 12 in Vignette 2) abbreviations of the names of GDPs, _Key and Door_ and _Levels_, are repeated in a sing song voice and the positioning of the Key and Door pattern as a challenging in the session start orientation outlined in Vignette 11 provokes a strong reaction.  
+For the preceding ten minutes, the parent and child dyad had been struggling with a tutorial chapter in the textbook, included as Appendix.tech.samplechapter, which explains how to add the pattern of keys and doors. In this pattern, players must collect a key and then navigate to a door to progress to the next level. The parent, Suzanna, had been making multiple changes to the code while the child, Olivia, expressed boredom. Suzanna then suggested that Olivia ask the facilitator, Mick, for help in resolving the coding issue. Once the bug was resolved, Suzanna handed the keyboard to Olivia to test the now working game.
 
 <!-- SIGNPOSTING TO DOL & OTHER ASPECTS OF GDP Use -->
 
@@ -212,17 +207,32 @@ The parent takes action to involve her child in the design process when technica
 
 The parent struggles to implement quite ambitious code challenges that she takes on but signals clearly when the process returns to a state suitable for ideation and design within the scope of the child. The completion of a coding task indicating that she is aware of the greater possibility for effective child input at this stage. The parent navigates the process skilfully and is able to elicit and then incorporate the child's interests in a variety of ways.
 
+
 **Challenge and initiative**
 
-The child also show initiative, in particular in relation to level design.  
+The child also show initiative, in particular in relation to level design. There is an awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm when, shortly after this interaction, the child deletes all elements of hazard in one level.
 
-There is an awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm when, shortly after this interaction, the child deletes all elements of hazard in one level. The parent cautions "it's no fun if their are no hazards". The response of the child -  "It is for me!" - appears to show both her awareness of the conventions of game design and a desire to work against those conventions. Later the child articulate her motivation to _surprise_ players with this level design.
+
+**Lingua franca**
+
+
+The implementation of a new game design pattern (GDP) involve adding new code to the game. The amount of code and/ changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging.
+
+The child(c) Olivia uses the name of game design pattern they are working in _Keys and Doors_ in the process of encouraging her parent(p) Suzanna to get started on it (Key 44 in Vignette 2).
+
+The key and door pattern is one of the harder ones to implement. Olivia is one of the younger participants and the parent Suzanna has taken on the role of solving harder code problems and in doing so has built important proficiency in coding practice.
+
+There is evidence that the Olivia(c) is building a connection to the game making pattern in (Key 12 in Vignette 2) abbreviations of the names of GDPs, _Key and Door_ and _Levels_, are repeated in a sing song voice and the positioning of the Key and Door pattern as a challenging in the session start orientation outlined in Vignette 11 provokes a strong reaction.  
 
 
 **Transition**
 
+The use of GDPs terms  as a lingua franca, a concept underpinning the utility of design pattern more generally [@erickson_lingua_2000], to help design for others is explored in the next section. More broadly the use of GDP concepts as an evolving design language to give feedback, to share knowledge, request and for other uses during community activity,  pair interactions and individual work are explored in following sections.
+
+<!-- **Transition**
+
 The interactions outlined in this vignette extract show some of the uses of GDPs as mediating strategies and repertoires of interaction that have emerged. These include x and y - which are explore in the next sections, particularly those a
-ddressing cultural practices and interpersonal /  guided participation.
+ddressing cultural practices and interpersonal /  guided participation. -->
 
 
 <!--
@@ -239,7 +249,6 @@ https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/#game-mechanic-ke
 <!-- This chapter now expands to represent this diversity of the coding and community practices of participants, focusing on their use of game design patterns. -->
 
 <!--
-MOVE TO DOL IF NEEDED
 
 For this child developed a cyclical pattern of alternation between higher and lower engagement with the coding processes based on lower engagement the period of time when her parent was problem solving code and higher engagement once it was implemention of the structural element was almost complete. Completion of the code implementation of a GDP allows for new possibilities in design dynamics using the same text matrix level design tool. This stage of working on a new GDP sustains the child's activity. The child shows high engagement at this stage outlining her plan for implementing the pattern in the process of designing their game. sPECIFICALLY SAYING X, Y Z. -->
 
@@ -248,15 +257,6 @@ For this child developed a cyclical pattern of alternation between higher and lo
 PULL OUT AN EXAMPLE -->
 
 <!-- ADD IN APPENDIX OF MAPS - AND GDPS FOR NAVIGATIONS AND REFRAME IN THIS CHAPTER. -->
-
-
-
-<!-- -->
-<!--
-#### TO INTEGRATE - Sustaining Engagement:
--->
-
-<!-- ## Observations and analysis of use of Game Design Patterns (GDPs) by participants -->
 
 
 ## Use of GDPs in the cultural plane / community level of activity
@@ -270,86 +270,55 @@ While other community interactions existed (introductions, warm up games), playt
 
 <!-- NOTE - ALSO LINKED TO IDEATION? - is this guided participation? -->
 
-
 **The use of GDPs (especially during playtesting) can aid the process of imagining end user experiences**
 
-This section examines how the concept and experience of implementing GDPs provoked participants to imagine the experience of end users of their game. Chapter 2 explored the proposal of professional and participatory design processes is that design should be informed by end user experience [@redstrom_towards_2006] , and the challenges involved in undertaking such a "operationalization of empathy" [@surma-aho_conceptualization_2022, p.1]. Taking a CHAT interpretation, this process involves shifts in perspectives from participants as they engage with objectives on different scopes of activity.
+This section examines how the concept and experience of implementing GDPs provoked participants to imagine the experience of end users of their game. Chapter 2 explored the proposal of professional and participatory design processes is that design should be informed by end user experience [@redstrom_towards_2006] , and the challenges involved in undertaking such a "operationalization of empathy" [@surma-aho_conceptualization_2022, p.1]. Taking a CHAT interpretation, this process involves shifts in perspectives from participants as they engage with objectives on different scopes of activity. For example, in the vignette above Olivia(c) persues a quirky design goal during her pair design work, which Suzanna(p) resists. Imagining a the shift in perspective to the imagined audience at a community level of interaction, the parent is keen to ensure a sense of challenge for the imagined player.
 
-For example, in the vignette above Olivia(c) persues a quirky design goal during her pair design work, which Suzanna(p) resists.  Imagining a the shift in perspective to the imagined audience, the parent is keen to keep a sense of game balance to ensure a sense of challenge for the imagined player.
+Suzanna shares _"Must be quite hard to get through that door._" when Olivia places the exit door high above a platform. She then continues - _“It’s no fun having a game without any hazards to avoid.”_ Olivia(c) seems determined to remove all hazards. _"It is for me!"_ she counters. She may be aware of the implications for game balance but takes pleasure in this destruction of the key challenge of the game as an act of disruptive play.
 
-Suzanna shares _"Must be quite hard to get through that door._" when Olivia places the exit door high above a platform. She then continues - _“It’s no fun having a game without any hazards to avoid.”_ The child seems determined to remove all hazards. _"It is for me!"_ the child counters. She may be aware of the implications for game balance but takes pleasure in this destruction of the key challenge of the game as an act of disruptive play. A later interaction with a peer shows that she is indeed imagining of the experience of a more immediate audience of fellow game makers and supporting students. _"I like making it frustrating. that other people find it frustrating!"_
-
-<!-- Olivia  comments that she wants players to be frustrated when playing the game and that this is a contrast to final level which has only rewards and no hazards. This being a "secret, special" experience which plays against the norms of platform game design, thus provoking player surprise and fun. She notes the persistence of the student helper who pushes past her frustration to complete the game. Suzanna remark "If people tried hard they would get to my level" shows her awareness of that not all players will persist in the same way. -->
-
-This relatively sophisiticated interaction illustrates the use of terms from GDPs to both explain and negotiate a conflict over the imagined user experience.
-SAY HOW? IN AT TERMS.
-
-DROP OR SHIFT?
-Game design patterns focused on gameplay rather than code structure focus on recognisable behaviour. Thus in the same way that visually organised code can aid ideation, designing code framework to help participants alter on a noticeable change in game play can foreground key GDPs.
-
+A later interaction with a peer shows that she is indeed imagining the experience of the immediate audience of fellow game makers and supporting students. _"I like making it frustrating. that other people find it frustrating!"_. Olivia(c) notes the persistence of a student helper who pushes past her frustration to complete the game. Her remark "If people tried hard they would get to my level" shows her awareness of that not all players will persist in the same way to reacj her final level which has only rewards and no hazards. This being a "secret, special" experience which plays against the norms of platform game design, thus intended to provoking player surprise.
 
 <!-- While Suzanna(p) imagine a user experience and make a playable game conforming to her perception of norms, Olivia's(c) playful imagining of the experience of a more immediate audience of fellow game makers and supporting students appears to provide a tangible motivation with rapid rewards.
 wider goal of making an engaging game if it interferes with the engagement of the test users. -->
-
-
-POSSIBLE END TO THIS SECTION?
-**GDPs aid the overall process of design for others by providing discreet and clear goals which are nested in the wider goal of making an engaging game.**
-HOW IS THIS DIFFERENT FROM WHAT IS EXPLORED IN NAVIGATION?
-
-
-<!-- NOTE - ANY EVIDENCE FOR THIS BASED ON INTENTIONAL DESIGN OR IS THIS JUST AN OBSERVATION OF ORGANIC BEHAVIOUR?
-Designing for others - as a key perspective in constructionism.
-Note: What added insights or tips for practitioners can I bring here?
-NOTE - cf Resnick Designing for Tinkerability - and the concepts in that.  -->
-
-
-<!-- - clear terms to use as a lingua-franca during self testing and playtesting. -->
-
 <!-- We have explored in the literature review the value of design as a process, to see surrounding world as a designed experience [@ratto_critical_2011].
 AND SO? -->
+<!-- There are different levels of designing for others
+One is just to make a playable game experience which by design involves an imagined user experience in the abstract. The example above shows a more playful and direct imagining of the experience of other people in the room a more tangible motivation with a more immediate reward. -->
 
-**Other examples and interpretation on designing for others / shifts of perspective**
+<!--
+NOTE #### GDP concepts and language used in informal feedback for peers to influence modification of games (developing community norms) - -->
 
-In interpreting data there were other examples of pair partners and peers either commenting on or suggesting to others that they should imagining others user experience to suggest game design alterations.
+**There are other examples of how concepts of game challenge and other aspects of gameplay experience evolved through informal feedback during playtesting and served to influence peers to modify their games to increase the enjoyment of peer players.**
 
-
-There are different levels of designing for others
-One is just to make a playable game experience which by design involves an imagined user experience in the abstract. The example above shows a more playful and direct imagining of the experience of other people in the room a more tangible motivation with a more immediate reward.
-
-
-#### GDP concepts and language used in informal feedback for peers to influence modification of games (developing community norms) -
-
-**Concepts of game challenge and other aspects of gameplay experience evolved through informal feedback during playtesting and served to influence peers to modify their games to increase the enjoyment of peer players.**
-
-
-REALLY TRIM THIS DOWN
-The discussion of game challenge, specifically comment about how 'hard' participant games were as the most common interaction
-
-
-during playtesting. The concept of difficulty for most of the participant's games was dependent on the interaction between the feel of the game controls and elements of game challenge associated with placement of hazards and moving enemies.
-
-Vignette.challenge outlines an key interaction which demonstrates norming behaviour towards Molly who has concentrated on the graphics of her game to the detriment of level of challenges, in particular the controls of the game are frustrating.
-
-<!-- children come and play Molly's game but only for less than a minute before leaving. While their feedback is non verbal the very short length of time that some of them spend is noticeable.  After the last one leaves Molly comments "It's so frustrating."  -->
-The vignette shows varied attempts to influence Molly to change  the game variables to make the gameplay less frustrating.
-
-In interactions we can see a similar message coming from peers in the playtesting process. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the players do not tell Molly directly to change the game, these comments appear to direct direction of the design to comply with an emerging community norm of jump feel stemming from the personal experiences of the participants and from tangible feeling of lack of control over the player's character in the game.
+The discussion of game challenge, specifically comments about how 'hard' participant games were a particularly common interaction during playtesting. Vignette.challenge outlines an key interaction which demonstrates norming behaviour towards Molly(p) who has concentrated on the graphics of her game to the detriment of level of challenges, in particular the controls of the game are frustrating. The vignette shows varied attempts to influence Molly to change  the game variables to make the gameplay less frustrating. They praise the look of the game but offer feedback on the experience of the game mechanic of jumping. While the players do not tell Molly directly to change the game, these comments appear to direct direction of the design to comply with an emerging community norm of how a player jumps should feel stemming from the participants feedbcak on the feeling of lack of control over the player's character in the game.
 
 These norming behaviours some of the informal norming behaviours that are less directive seen in the work of Rogoff and colleagues as explored in literature review [@rogoff_cultural_2003].
 
 
+<!-- children come and play Molly's game but only for less than a minute before leaving. While their feedback is non verbal the very short length of time that some of them spend is noticeable.  After the last one leaves Molly comments "It's so frustrating."  -->
 
-MOVED Molly's challenge feedback TO AN APPENDIX
+**Ending / Transition - Other examples and interpretation on designing for others / shifts of perspective**
 
+Returning to the complexity of Suzanna and Olivia's interaction which involves negotiation over the imagined experience of others involves the use of GDPs concepts. These game design patterns (GDPs) focused on gameplay rather than code structure focus on recognisable behaviour.
+GDPs aid the overall process of design for others by providing discreet and clear goals which are nested in the wider goal of making an engaging game.
 
+In interpreting data there were other examples of pair partners and peers either commenting on or suggesting to others that they should imagining others user experience to suggest game design alterations.
+
+Such use was present in 6 of the 12 video capture sessions analysed.
 
 ### GDPs facilitate the use of wider funds of knowledge / interest
 
 **GDPs allow participants to share and explore their home and professional funds of knowledge and practices in the emerging learning community.**
 
-The premise driving my exploration in this area (in particular the decision to structure pedagogy around GDPs) is that the tacit knowledge of games of most family members is extensive even if they are not avid gamers due to the pervasive influence of casual games into most extended families [Be sure to explore further and put in intro].
+<!-- [Be sure to explore context further and put in intro]. -->
 
-In the last chapter outlined ways in which participants could to create their own graphical and audio assets and situated this process as a aligning with Cole's conception of surfacing funds of interest. This process facilitated participants to bring their home and digital life interests into the game making process, a rich cultural source [Livingstone]. As outlined in literature [Gee / Ito & Scratch community] , graphical assets along with  via the use of the creation of game narratives), are motivating and sustain engagement.
+One premise driving my exploration in the use of gameplay features as a feature in pedagogy is that the tacit knowledge of gaming conventions of most family members is extensive even if they are not avid gamers due to the extensive influence of video game culture and experience into mainstream culture including contexts of family life [@ito_hanging_2010; @livingstone_digital_2018], in particular retro gaming [@heineman2014public]. As such, the process of facilitating ways of surfacing and working gwith such tacit knowledge aligns with Moll's concept of funds on knowledge, and if aligned, funds of identity [@fasso_identity_2020; @esteban-guitart_funds_2014]. Within a CHAT framework these funds of identity and knowledge can be seen as tools which facilitate the transfer of potentially useful concepts across the boundaries between activity systems, in this case between home activity and that happening in this game making community, with the associated inclusive benefits of working with participants home interests explored by Barron [@barron_conceptualizing_2010; @barron_interest_2006-1] and similar work by Gutiérrez on third spaces [@gutierrez_developing_2008].  
+
+As outlined in literature on the motivations of social making [Gee / Ito & Scratch community] and the ability to make personalised game assets narratives, sustain engagement [@sefton-green_mapping_2013].
+
+In the last chapter I outlined ways in which participants could to create their own graphical and audio assets and the creation of game narratives.
+
+This process facilitated participants to bring their home and digital life indentity into the game making process,
 
 In addition to issues of aesthetics, and understandings of game challenge or mechanics explored in the section above, knowledge of key knowledge of game mechanics emerged as part of  productive cultural repertoires.
 
