--- a/_posts/thesis_chapters/tocs/2024-11-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-11-6-Gdps.md_toc.md
@@ -4,9 +4,10 @@
         2024](#research-questions---march-2024)
         -   [Word count](#word-count)
     -   [Introduction](#introduction)
-    -   [Study of Vignette 2](#study-of-vignette-2)
-        -   [Descriptive Commentary on Vignette
-            2](#descriptive-commentary-on-vignette-2)
+    -   [Initial broad commentary on Vignette
+        2](#initial-broad-commentary-on-vignette-2)
+        -   [Short Descriptive Commentary on Vignette
+            2](#short-descriptive-commentary-on-vignette-2)
     -   [Use of GDPs in the cultural plane / community level of
         activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
         -   [The role of GDPs to facilitate learners to design for
@@ -73,6 +74,8 @@
                 CLOSING OFF
                 GDPS](#tensions-between-facilitating-agency-and-norming-practices---rewrite-as-a-way-of-opening-this-topic-and-closing-off-gdps)
         -   [Simple table of uses](#simple-table-of-uses)
+            -   [Full table of GDP use with supporting
+                evidence](#full-table-of-gdp-use-with-supporting-evidence)
     -   [Chapter Conclusion](#chapter-conclusion)
         -   [Summary of the uses of Game Design
             Patterns](#summary-of-the-uses-of-game-design-patterns)
